// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare i32 @puts(ptr) 1`] = `
Object {
  "result": Object {
    "length": 6,
    "node": Object {
      "data": Object {
        "inputs": Array [
          Object {
            "data": Object {
              "flags": Array [],
              "identifier": undefined,
              "type": Object {
                "data": undefined,
                "type": Object {
                  "enum": Object {
                    "0": "FILE",
                    "1": "DECLARE",
                    "10": "IDENTIFIER",
                    "11": "NUMBER",
                    "12": "VOID_TYPE",
                    "13": "BLOCK",
                    "14": "RETURN_INSTRUCTION",
                    "15": "CALL_ASSIGNABLE",
                    "16": "ASSIGNMENT_INSTRUCTION",
                    "17": "INPUT",
                    "18": "INPUT_FLAG",
                    "2": "FUNCTION",
                    "3": "INTEGER_TYPE",
                    "4": "GLOBAL_VARIABLE",
                    "5": "STRING",
                    "6": "FLOAT_TYPE",
                    "7": "POINTER_TYPE",
                    "8": "ARRAY_TYPE",
                    "9": "STRUCT_TYPE",
                    "ARRAY_TYPE": 8,
                    "ASSIGNMENT_INSTRUCTION": 16,
                    "BLOCK": 13,
                    "CALL_ASSIGNABLE": 15,
                    "DECLARE": 1,
                    "FILE": 0,
                    "FLOAT_TYPE": 6,
                    "FUNCTION": 2,
                    "GLOBAL_VARIABLE": 4,
                    "IDENTIFIER": 10,
                    "INPUT": 17,
                    "INPUT_FLAG": 18,
                    "INTEGER_TYPE": 3,
                    "NUMBER": 11,
                    "POINTER_TYPE": 7,
                    "RETURN_INSTRUCTION": 14,
                    "STRING": 5,
                    "STRUCT_TYPE": 9,
                    "VOID_TYPE": 12,
                  },
                  "id": 7,
                },
              },
            },
            "type": Object {
              "enum": Object {
                "0": "FILE",
                "1": "DECLARE",
                "10": "IDENTIFIER",
                "11": "NUMBER",
                "12": "VOID_TYPE",
                "13": "BLOCK",
                "14": "RETURN_INSTRUCTION",
                "15": "CALL_ASSIGNABLE",
                "16": "ASSIGNMENT_INSTRUCTION",
                "17": "INPUT",
                "18": "INPUT_FLAG",
                "2": "FUNCTION",
                "3": "INTEGER_TYPE",
                "4": "GLOBAL_VARIABLE",
                "5": "STRING",
                "6": "FLOAT_TYPE",
                "7": "POINTER_TYPE",
                "8": "ARRAY_TYPE",
                "9": "STRUCT_TYPE",
                "ARRAY_TYPE": 8,
                "ASSIGNMENT_INSTRUCTION": 16,
                "BLOCK": 13,
                "CALL_ASSIGNABLE": 15,
                "DECLARE": 1,
                "FILE": 0,
                "FLOAT_TYPE": 6,
                "FUNCTION": 2,
                "GLOBAL_VARIABLE": 4,
                "IDENTIFIER": 10,
                "INPUT": 17,
                "INPUT_FLAG": 18,
                "INTEGER_TYPE": 3,
                "NUMBER": 11,
                "POINTER_TYPE": 7,
                "RETURN_INSTRUCTION": 14,
                "STRING": 5,
                "STRUCT_TYPE": 9,
                "VOID_TYPE": 12,
              },
              "id": 17,
            },
          },
        ],
        "name": Object {
          "data": Object {
            "name": "puts",
            "type": 0,
          },
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 10,
          },
        },
        "returnType": Object {
          "data": 32,
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 3,
          },
        },
      },
      "type": Object {
        "enum": Object {
          "0": "FILE",
          "1": "DECLARE",
          "10": "IDENTIFIER",
          "11": "NUMBER",
          "12": "VOID_TYPE",
          "13": "BLOCK",
          "14": "RETURN_INSTRUCTION",
          "15": "CALL_ASSIGNABLE",
          "16": "ASSIGNMENT_INSTRUCTION",
          "17": "INPUT",
          "18": "INPUT_FLAG",
          "2": "FUNCTION",
          "3": "INTEGER_TYPE",
          "4": "GLOBAL_VARIABLE",
          "5": "STRING",
          "6": "FLOAT_TYPE",
          "7": "POINTER_TYPE",
          "8": "ARRAY_TYPE",
          "9": "STRUCT_TYPE",
          "ARRAY_TYPE": 8,
          "ASSIGNMENT_INSTRUCTION": 16,
          "BLOCK": 13,
          "CALL_ASSIGNABLE": 15,
          "DECLARE": 1,
          "FILE": 0,
          "FLOAT_TYPE": 6,
          "FUNCTION": 2,
          "GLOBAL_VARIABLE": 4,
          "IDENTIFIER": 10,
          "INPUT": 17,
          "INPUT_FLAG": 18,
          "INTEGER_TYPE": 3,
          "NUMBER": 11,
          "POINTER_TYPE": 7,
          "RETURN_INSTRUCTION": 14,
          "STRING": 5,
          "STRUCT_TYPE": 9,
          "VOID_TYPE": 12,
        },
        "id": 1,
      },
    },
  },
  "success": true,
}
`;

exports[`declare void @someFn(ptr nocapture noalias, i64, i1) 1`] = `
Object {
  "result": Object {
    "length": 12,
    "node": Object {
      "data": Object {
        "inputs": Array [
          Object {
            "data": Object {
              "flags": Array [
                Object {
                  "data": Object {
                    "enum": Object {
                      "0": "NO_CAPTURE",
                      "1": "NO_ALIAS",
                      "2": "NO_FREE",
                      "NO_ALIAS": 1,
                      "NO_CAPTURE": 0,
                      "NO_FREE": 2,
                    },
                    "id": 0,
                  },
                  "type": Object {
                    "enum": Object {
                      "0": "FILE",
                      "1": "DECLARE",
                      "10": "IDENTIFIER",
                      "11": "NUMBER",
                      "12": "VOID_TYPE",
                      "13": "BLOCK",
                      "14": "RETURN_INSTRUCTION",
                      "15": "CALL_ASSIGNABLE",
                      "16": "ASSIGNMENT_INSTRUCTION",
                      "17": "INPUT",
                      "18": "INPUT_FLAG",
                      "2": "FUNCTION",
                      "3": "INTEGER_TYPE",
                      "4": "GLOBAL_VARIABLE",
                      "5": "STRING",
                      "6": "FLOAT_TYPE",
                      "7": "POINTER_TYPE",
                      "8": "ARRAY_TYPE",
                      "9": "STRUCT_TYPE",
                      "ARRAY_TYPE": 8,
                      "ASSIGNMENT_INSTRUCTION": 16,
                      "BLOCK": 13,
                      "CALL_ASSIGNABLE": 15,
                      "DECLARE": 1,
                      "FILE": 0,
                      "FLOAT_TYPE": 6,
                      "FUNCTION": 2,
                      "GLOBAL_VARIABLE": 4,
                      "IDENTIFIER": 10,
                      "INPUT": 17,
                      "INPUT_FLAG": 18,
                      "INTEGER_TYPE": 3,
                      "NUMBER": 11,
                      "POINTER_TYPE": 7,
                      "RETURN_INSTRUCTION": 14,
                      "STRING": 5,
                      "STRUCT_TYPE": 9,
                      "VOID_TYPE": 12,
                    },
                    "id": 18,
                  },
                },
                Object {
                  "data": Object {
                    "enum": Object {
                      "0": "NO_CAPTURE",
                      "1": "NO_ALIAS",
                      "2": "NO_FREE",
                      "NO_ALIAS": 1,
                      "NO_CAPTURE": 0,
                      "NO_FREE": 2,
                    },
                    "id": 1,
                  },
                  "type": Object {
                    "enum": Object {
                      "0": "FILE",
                      "1": "DECLARE",
                      "10": "IDENTIFIER",
                      "11": "NUMBER",
                      "12": "VOID_TYPE",
                      "13": "BLOCK",
                      "14": "RETURN_INSTRUCTION",
                      "15": "CALL_ASSIGNABLE",
                      "16": "ASSIGNMENT_INSTRUCTION",
                      "17": "INPUT",
                      "18": "INPUT_FLAG",
                      "2": "FUNCTION",
                      "3": "INTEGER_TYPE",
                      "4": "GLOBAL_VARIABLE",
                      "5": "STRING",
                      "6": "FLOAT_TYPE",
                      "7": "POINTER_TYPE",
                      "8": "ARRAY_TYPE",
                      "9": "STRUCT_TYPE",
                      "ARRAY_TYPE": 8,
                      "ASSIGNMENT_INSTRUCTION": 16,
                      "BLOCK": 13,
                      "CALL_ASSIGNABLE": 15,
                      "DECLARE": 1,
                      "FILE": 0,
                      "FLOAT_TYPE": 6,
                      "FUNCTION": 2,
                      "GLOBAL_VARIABLE": 4,
                      "IDENTIFIER": 10,
                      "INPUT": 17,
                      "INPUT_FLAG": 18,
                      "INTEGER_TYPE": 3,
                      "NUMBER": 11,
                      "POINTER_TYPE": 7,
                      "RETURN_INSTRUCTION": 14,
                      "STRING": 5,
                      "STRUCT_TYPE": 9,
                      "VOID_TYPE": 12,
                    },
                    "id": 18,
                  },
                },
              ],
              "identifier": undefined,
              "type": Object {
                "data": undefined,
                "type": Object {
                  "enum": Object {
                    "0": "FILE",
                    "1": "DECLARE",
                    "10": "IDENTIFIER",
                    "11": "NUMBER",
                    "12": "VOID_TYPE",
                    "13": "BLOCK",
                    "14": "RETURN_INSTRUCTION",
                    "15": "CALL_ASSIGNABLE",
                    "16": "ASSIGNMENT_INSTRUCTION",
                    "17": "INPUT",
                    "18": "INPUT_FLAG",
                    "2": "FUNCTION",
                    "3": "INTEGER_TYPE",
                    "4": "GLOBAL_VARIABLE",
                    "5": "STRING",
                    "6": "FLOAT_TYPE",
                    "7": "POINTER_TYPE",
                    "8": "ARRAY_TYPE",
                    "9": "STRUCT_TYPE",
                    "ARRAY_TYPE": 8,
                    "ASSIGNMENT_INSTRUCTION": 16,
                    "BLOCK": 13,
                    "CALL_ASSIGNABLE": 15,
                    "DECLARE": 1,
                    "FILE": 0,
                    "FLOAT_TYPE": 6,
                    "FUNCTION": 2,
                    "GLOBAL_VARIABLE": 4,
                    "IDENTIFIER": 10,
                    "INPUT": 17,
                    "INPUT_FLAG": 18,
                    "INTEGER_TYPE": 3,
                    "NUMBER": 11,
                    "POINTER_TYPE": 7,
                    "RETURN_INSTRUCTION": 14,
                    "STRING": 5,
                    "STRUCT_TYPE": 9,
                    "VOID_TYPE": 12,
                  },
                  "id": 7,
                },
              },
            },
            "type": Object {
              "enum": Object {
                "0": "FILE",
                "1": "DECLARE",
                "10": "IDENTIFIER",
                "11": "NUMBER",
                "12": "VOID_TYPE",
                "13": "BLOCK",
                "14": "RETURN_INSTRUCTION",
                "15": "CALL_ASSIGNABLE",
                "16": "ASSIGNMENT_INSTRUCTION",
                "17": "INPUT",
                "18": "INPUT_FLAG",
                "2": "FUNCTION",
                "3": "INTEGER_TYPE",
                "4": "GLOBAL_VARIABLE",
                "5": "STRING",
                "6": "FLOAT_TYPE",
                "7": "POINTER_TYPE",
                "8": "ARRAY_TYPE",
                "9": "STRUCT_TYPE",
                "ARRAY_TYPE": 8,
                "ASSIGNMENT_INSTRUCTION": 16,
                "BLOCK": 13,
                "CALL_ASSIGNABLE": 15,
                "DECLARE": 1,
                "FILE": 0,
                "FLOAT_TYPE": 6,
                "FUNCTION": 2,
                "GLOBAL_VARIABLE": 4,
                "IDENTIFIER": 10,
                "INPUT": 17,
                "INPUT_FLAG": 18,
                "INTEGER_TYPE": 3,
                "NUMBER": 11,
                "POINTER_TYPE": 7,
                "RETURN_INSTRUCTION": 14,
                "STRING": 5,
                "STRUCT_TYPE": 9,
                "VOID_TYPE": 12,
              },
              "id": 17,
            },
          },
          Object {
            "data": Object {
              "flags": Array [],
              "identifier": undefined,
              "type": Object {
                "data": 64,
                "type": Object {
                  "enum": Object {
                    "0": "FILE",
                    "1": "DECLARE",
                    "10": "IDENTIFIER",
                    "11": "NUMBER",
                    "12": "VOID_TYPE",
                    "13": "BLOCK",
                    "14": "RETURN_INSTRUCTION",
                    "15": "CALL_ASSIGNABLE",
                    "16": "ASSIGNMENT_INSTRUCTION",
                    "17": "INPUT",
                    "18": "INPUT_FLAG",
                    "2": "FUNCTION",
                    "3": "INTEGER_TYPE",
                    "4": "GLOBAL_VARIABLE",
                    "5": "STRING",
                    "6": "FLOAT_TYPE",
                    "7": "POINTER_TYPE",
                    "8": "ARRAY_TYPE",
                    "9": "STRUCT_TYPE",
                    "ARRAY_TYPE": 8,
                    "ASSIGNMENT_INSTRUCTION": 16,
                    "BLOCK": 13,
                    "CALL_ASSIGNABLE": 15,
                    "DECLARE": 1,
                    "FILE": 0,
                    "FLOAT_TYPE": 6,
                    "FUNCTION": 2,
                    "GLOBAL_VARIABLE": 4,
                    "IDENTIFIER": 10,
                    "INPUT": 17,
                    "INPUT_FLAG": 18,
                    "INTEGER_TYPE": 3,
                    "NUMBER": 11,
                    "POINTER_TYPE": 7,
                    "RETURN_INSTRUCTION": 14,
                    "STRING": 5,
                    "STRUCT_TYPE": 9,
                    "VOID_TYPE": 12,
                  },
                  "id": 3,
                },
              },
            },
            "type": Object {
              "enum": Object {
                "0": "FILE",
                "1": "DECLARE",
                "10": "IDENTIFIER",
                "11": "NUMBER",
                "12": "VOID_TYPE",
                "13": "BLOCK",
                "14": "RETURN_INSTRUCTION",
                "15": "CALL_ASSIGNABLE",
                "16": "ASSIGNMENT_INSTRUCTION",
                "17": "INPUT",
                "18": "INPUT_FLAG",
                "2": "FUNCTION",
                "3": "INTEGER_TYPE",
                "4": "GLOBAL_VARIABLE",
                "5": "STRING",
                "6": "FLOAT_TYPE",
                "7": "POINTER_TYPE",
                "8": "ARRAY_TYPE",
                "9": "STRUCT_TYPE",
                "ARRAY_TYPE": 8,
                "ASSIGNMENT_INSTRUCTION": 16,
                "BLOCK": 13,
                "CALL_ASSIGNABLE": 15,
                "DECLARE": 1,
                "FILE": 0,
                "FLOAT_TYPE": 6,
                "FUNCTION": 2,
                "GLOBAL_VARIABLE": 4,
                "IDENTIFIER": 10,
                "INPUT": 17,
                "INPUT_FLAG": 18,
                "INTEGER_TYPE": 3,
                "NUMBER": 11,
                "POINTER_TYPE": 7,
                "RETURN_INSTRUCTION": 14,
                "STRING": 5,
                "STRUCT_TYPE": 9,
                "VOID_TYPE": 12,
              },
              "id": 17,
            },
          },
          Object {
            "data": Object {
              "flags": Array [],
              "identifier": undefined,
              "type": Object {
                "data": 1,
                "type": Object {
                  "enum": Object {
                    "0": "FILE",
                    "1": "DECLARE",
                    "10": "IDENTIFIER",
                    "11": "NUMBER",
                    "12": "VOID_TYPE",
                    "13": "BLOCK",
                    "14": "RETURN_INSTRUCTION",
                    "15": "CALL_ASSIGNABLE",
                    "16": "ASSIGNMENT_INSTRUCTION",
                    "17": "INPUT",
                    "18": "INPUT_FLAG",
                    "2": "FUNCTION",
                    "3": "INTEGER_TYPE",
                    "4": "GLOBAL_VARIABLE",
                    "5": "STRING",
                    "6": "FLOAT_TYPE",
                    "7": "POINTER_TYPE",
                    "8": "ARRAY_TYPE",
                    "9": "STRUCT_TYPE",
                    "ARRAY_TYPE": 8,
                    "ASSIGNMENT_INSTRUCTION": 16,
                    "BLOCK": 13,
                    "CALL_ASSIGNABLE": 15,
                    "DECLARE": 1,
                    "FILE": 0,
                    "FLOAT_TYPE": 6,
                    "FUNCTION": 2,
                    "GLOBAL_VARIABLE": 4,
                    "IDENTIFIER": 10,
                    "INPUT": 17,
                    "INPUT_FLAG": 18,
                    "INTEGER_TYPE": 3,
                    "NUMBER": 11,
                    "POINTER_TYPE": 7,
                    "RETURN_INSTRUCTION": 14,
                    "STRING": 5,
                    "STRUCT_TYPE": 9,
                    "VOID_TYPE": 12,
                  },
                  "id": 3,
                },
              },
            },
            "type": Object {
              "enum": Object {
                "0": "FILE",
                "1": "DECLARE",
                "10": "IDENTIFIER",
                "11": "NUMBER",
                "12": "VOID_TYPE",
                "13": "BLOCK",
                "14": "RETURN_INSTRUCTION",
                "15": "CALL_ASSIGNABLE",
                "16": "ASSIGNMENT_INSTRUCTION",
                "17": "INPUT",
                "18": "INPUT_FLAG",
                "2": "FUNCTION",
                "3": "INTEGER_TYPE",
                "4": "GLOBAL_VARIABLE",
                "5": "STRING",
                "6": "FLOAT_TYPE",
                "7": "POINTER_TYPE",
                "8": "ARRAY_TYPE",
                "9": "STRUCT_TYPE",
                "ARRAY_TYPE": 8,
                "ASSIGNMENT_INSTRUCTION": 16,
                "BLOCK": 13,
                "CALL_ASSIGNABLE": 15,
                "DECLARE": 1,
                "FILE": 0,
                "FLOAT_TYPE": 6,
                "FUNCTION": 2,
                "GLOBAL_VARIABLE": 4,
                "IDENTIFIER": 10,
                "INPUT": 17,
                "INPUT_FLAG": 18,
                "INTEGER_TYPE": 3,
                "NUMBER": 11,
                "POINTER_TYPE": 7,
                "RETURN_INSTRUCTION": 14,
                "STRING": 5,
                "STRUCT_TYPE": 9,
                "VOID_TYPE": 12,
              },
              "id": 17,
            },
          },
        ],
        "name": Object {
          "data": Object {
            "name": "someFn",
            "type": 0,
          },
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 10,
          },
        },
        "returnType": Object {
          "data": undefined,
          "type": Object {
            "enum": Object {
              "0": "FILE",
              "1": "DECLARE",
              "10": "IDENTIFIER",
              "11": "NUMBER",
              "12": "VOID_TYPE",
              "13": "BLOCK",
              "14": "RETURN_INSTRUCTION",
              "15": "CALL_ASSIGNABLE",
              "16": "ASSIGNMENT_INSTRUCTION",
              "17": "INPUT",
              "18": "INPUT_FLAG",
              "2": "FUNCTION",
              "3": "INTEGER_TYPE",
              "4": "GLOBAL_VARIABLE",
              "5": "STRING",
              "6": "FLOAT_TYPE",
              "7": "POINTER_TYPE",
              "8": "ARRAY_TYPE",
              "9": "STRUCT_TYPE",
              "ARRAY_TYPE": 8,
              "ASSIGNMENT_INSTRUCTION": 16,
              "BLOCK": 13,
              "CALL_ASSIGNABLE": 15,
              "DECLARE": 1,
              "FILE": 0,
              "FLOAT_TYPE": 6,
              "FUNCTION": 2,
              "GLOBAL_VARIABLE": 4,
              "IDENTIFIER": 10,
              "INPUT": 17,
              "INPUT_FLAG": 18,
              "INTEGER_TYPE": 3,
              "NUMBER": 11,
              "POINTER_TYPE": 7,
              "RETURN_INSTRUCTION": 14,
              "STRING": 5,
              "STRUCT_TYPE": 9,
              "VOID_TYPE": 12,
            },
            "id": 12,
          },
        },
      },
      "type": Object {
        "enum": Object {
          "0": "FILE",
          "1": "DECLARE",
          "10": "IDENTIFIER",
          "11": "NUMBER",
          "12": "VOID_TYPE",
          "13": "BLOCK",
          "14": "RETURN_INSTRUCTION",
          "15": "CALL_ASSIGNABLE",
          "16": "ASSIGNMENT_INSTRUCTION",
          "17": "INPUT",
          "18": "INPUT_FLAG",
          "2": "FUNCTION",
          "3": "INTEGER_TYPE",
          "4": "GLOBAL_VARIABLE",
          "5": "STRING",
          "6": "FLOAT_TYPE",
          "7": "POINTER_TYPE",
          "8": "ARRAY_TYPE",
          "9": "STRUCT_TYPE",
          "ARRAY_TYPE": 8,
          "ASSIGNMENT_INSTRUCTION": 16,
          "BLOCK": 13,
          "CALL_ASSIGNABLE": 15,
          "DECLARE": 1,
          "FILE": 0,
          "FLOAT_TYPE": 6,
          "FUNCTION": 2,
          "GLOBAL_VARIABLE": 4,
          "IDENTIFIER": 10,
          "INPUT": 17,
          "INPUT_FLAG": 18,
          "INTEGER_TYPE": 3,
          "NUMBER": 11,
          "POINTER_TYPE": 7,
          "RETURN_INSTRUCTION": 14,
          "STRING": 5,
          "STRUCT_TYPE": 9,
          "VOID_TYPE": 12,
        },
        "id": 1,
      },
    },
  },
  "success": true,
}
`;
